Bug 300642. Fix regression from fastback that broke page loading in screen readers. r+sr=bryner, a=asa